# CLI-tool-for-taking-notes

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: demo-plan.md
notes_cli/: __init__.py  cli.py  config.py  editor.py  formatting.py  models.py  storage.py
tests/: test_cli.py
