[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notes-cli"
version = "0.1.0"
description = "Local CLI note-taking tool with SQLite/JSON backends"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Oryntai" },
]
keywords = ["cli", "notes", "sqlite", "python", "productivity", "offline"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pip-audit>=2.7",
]

[project.scripts]
notes = "notes_cli.cli:main"

[tool.setuptools.packages.find]
include = ["notes_cli*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.coverage.run]
source = ["notes_cli"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.mypy]
python_version = "3.11"
pretty = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
